<resources>
    <string name="app_name">TaskBeats</string>
    <string name="home_title">Task Beat</string>
    <string name="create_task_title">Create task</string>
    <string name="update_task_title">Update task</string>
    <string name="update">update</string>
    <string name="create">create</string>
    <string name="category_delete_title">Important</string>
    <string name="category_delete_description">By deleting a category you will delete all tasks with this category, are you sure?</string>
    <string name="delete">delete</string>
    <string name="empty_category_title">No category found!</string>
    <string name="empty_category_description">Please create a new one</string>
</resources>